--- a/templates/fav/fav_tv_delete.html
+++ b/templates/fav/fav_tv_delete.html
@@ -6,8 +6,8 @@
 <h1>Delete page</h1>
 <form action="" method="post">
     {% csrf_token %}
-    <p>please press on the button to confirm the delete</p>
-    <input type="submit" value="Confirm" />
+    <p class="p">please press on the button to confirm the delete</p>
+    <input type="submit" value="Confirm" class="submit">
 </form>
 
 
