--- a/templates/fav/fav_tv_update.html
+++ b/templates/fav/fav_tv_update.html
@@ -3,12 +3,12 @@
 {% block title %} Update {% endblock %}
 
 {% block content %}
-<h1>Update page</h1>
 
 <form action="" method="post">
+    <h1 class="title">Update form</h1>
     {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" value="submit">
+    {{form}}
+    <input type="submit" value="submit" class="submit">
 </form>
 
 {% endblock %}
